
  shred again uses defined patterns for all iteration counts.
  [bug introduced in coreutils-5.93]

** New commands

  base32 is added to complement the existing base64 command,
  and encodes and decodes printable text as per RFC 4648.

** Changes in behavior

  base64 no longer supports hex or oct --wrap parameters,
  thus better supporting decimals with leading zeros.

  df now prefers sources towards the root of a device when
  eliding duplicate bind mounted entries.

  md5sum now quotes all printed file names to avoid confusing error messages.
  This also affects sha1sum, sha224sum, sha256sum, sha384sum and sha512sum.

** Improvements

  All utilities now quote user supplied arguments in error strings,
  which avoids confusing error messages in the presence of '\r' chars etc.

  dircolors now supports globbing of TERM entries in its database.
  For example "TERM *256color*" is now supported.

  du no longer stats all mount points at startup, only doing so
  upon detection of a directory cycle.
  [issue introduced in coreutils-8.20]

  ls -w0 is now interpreted as no limit on the length of the outputted line.


* Noteworthy changes in release 8.24 (2015-07-03) [stable]

** Bug fixes

  dd supports more robust SIGINFO/SIGUSR1 handling for outputting statistics.
  Previously those signals may have inadvertently terminated the process.

  df --local no longer hangs with inaccessible remote mounts.
  [bug introduced in coreutils-8.21]

  du now silently ignores all directory cycles due to bind mounts.
  Previously it would issue a warning and exit with a failure status.
  [bug introduced in coreutils-8.1 and partially fixed in coreutils-8.23]

  chroot again calls chroot(DIR) and chdir("/"), even if DIR is "/".
  This handles separate bind mounted "/" trees, and environments
  depending on the implicit chdir("/").
  [bugs introduced in coreutils-8.23]

  cp no longer issues an incorrect warning about directory hardlinks when a